--- a/webconsole-plugins/useradmin/src/main/resources/res/plugin.html
+++ b/webconsole-plugins/useradmin/src/main/resources/res/plugin.html
@@ -1,4 +1,7 @@
-﻿<script type="text/javascript" src="${pluginRoot}/res/jsTree.v.0.9.9a/jquery.tree.min.js"></script>
+﻿<!--
+<script type="text/javascript" src="${pluginRoot}/res/jsTree.v.0.9.9a/jquery.tree.min.js"></script>
+-->
+<script type="text/javascript" src="${pluginRoot}/res/jstree-3.0.9/jstree.min.js"></script>
 <script type="text/javascript" src="${pluginRoot}/res/plugin.js"></script>
 <script type="text/javascript">
 // <![CDATA[
@@ -42,6 +45,7 @@ var i18n = {
 						<td colspan="4">
 							<button id="delRole">${delete}</button> 
 							<button id="savRole">${save}</button>
+							<button id="toggleRequiredRole">${toggleRequired}</button>
 						</td>
 					</tr>
 				</tfoot>
